fix: revert to multiple regexes

--- a/container-structure-test.yaml
+++ b/container-structure-test.yaml
@@ -28,7 +28,8 @@ commandTests:
         value: https://github.com/jruby
     command: "entrypoint"
     expectedError:
-      - ".*Trusting permanently: .{1}https://github.com/jruby.{1}$"
+      - ".*(Trusting permanently:).*"
+      - ".*(https://github.com/jruby).*"
   - name: "Does multiple arguments work"
     envVars:
       - key: INPUT_SCRIPT
